# calliope

./: .gitignore  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml
corpus/: vectors.toml
crates/calliope-adapter-ffmpeg/: Cargo.toml
crates/calliope-adapter-ffmpeg/src/: lib.rs
crates/calliope-adapter-g2g/: Cargo.toml
crates/calliope-adapter-g2g/src/: lib.rs
crates/calliope-adapter-gst/: Cargo.toml
crates/calliope-adapter-gst/src/: lib.rs
crates/calliope-cli/: Cargo.toml
crates/calliope-cli/src/: main.rs
crates/calliope-core/: Cargo.toml
crates/calliope-core/src/: compare.rs  corpus.rs  engine.rs  fault.rs  fluster.rs  framehash.rs  lib.rs  minimize.rs  probe.rs  report.rs  runner.rs  scenario.rs
scenarios/: aac-determinism.toml  av1-420p10-golden.toml  av1-decode-golden.toml  g2g-determinism.toml  h264-422-autoprobe.toml  h264-444-autoprobe.toml  h264-autoprobe.toml  h264-decode-smoke.toml  h264-ffmpeg-encode-diff.toml  h264-nal-payload-fuzz.toml  h264-nv12.toml  h264-outcome-diff.toml  h264-resolution-change.toml  h264-soak.toml  h264-ts-bitflip.toml  h264-ts-decode.toml  h264-x264enc-roundtrip.toml  h265-420p10-decode.toml  h265-decode.toml  h265-mp4-decode.toml  hevc-422p10-golden.toml  hevc-444p12-golden.toml  hevc-main10-golden.toml  opus-decode-diff.toml  vp8-decode-golden.toml  vp9-420p10-golden.toml  vp9-444p12-golden.toml  vp9-decode-golden.toml
tools/: build-g2g-asan.sh  ci-smoke.sh  fuzz-g2g.sh  gen-local-corpus.sh  loom-g2g.sh  lsan-g2g.sh  miri-g2g.sh  outcome-diff-g2g.sh  tsan-g2g.sh
