[package]
name = "calliope-core"
description = "Engine-neutral media QA harness: scenarios, corpus, runner, comparators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true
md-5.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
zip.workspace = true

[lints]
workspace = true
